--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,10 @@
+/* ────────────────────────────────────────────────────────────────
+   TABLE OF CONTENTS
+   1. Footer
+   2. Media Queries
+   ──────────────────────────────────────────────────────────────── */
+
+/* ── 1. Footer ─────────────────────────────────────────── */
 footer {
     background: var(--nav-footer);
     color: var(--white);
@@ -8,6 +15,16 @@ footer {
     font-size: 1rem;
 }
 
+.footer-icons {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 2rem 0 0;
+    gap: 1rem;
+    border: 2px solid black;
+    background-color: yellow;
+}
+
+/* ── 2. Media Queries ─────────────────────────────────────────── */
 @media screen and (min-width: 768px) {
     footer {
         font-size: 1rem;
