--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -20,8 +20,14 @@ footer {
     justify-content: flex-end;
     padding: 0 2rem 0 0;
     gap: 1rem;
-    border: 2px solid black;
-    background-color: yellow;
+}
+
+.footer-icons > a {
+    transition: all 0.4s;
+}
+
+.footer-icons > a:hover {
+    transform: scale(1.3);
 }
 
 /* ── 2. Media Queries ─────────────────────────────────────────── */
